<resources>
    <string name="app_name">I-CaLoriX</string>
    <string name="login_header">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="login">Login</string>
    <string name="register_header">Create a new account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="next">Next</string>

    <string name="getting_started">Let\'s Get Started</string>
    <string name="getting_started_1">Optimize your healthy lifestyle by allowing us to expertly manage your calorie intake</string>
    <string name="getting_started_2">Share your body information with us so that we can effectively manage your calorie needs</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>

    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_1">Set your goal</string>
    <string name="getting_started_3">We\'re eager to learn about your goal so that we can embark on this journey together.</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="add_custom_meal">Add Custom Meal</string>
    <string name="add_meal">Add Meal</string>
    <string name="fats_per_serving">Fats per serving</string>
    <string name="protein_per_serving">Protein per serving</string>
    <string name="carbs_per_serving">Carbs per serving</string>
    <string name="calories_per_serving">Calories per serving</string>
    <string name="name">Name</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="edit_custom_meal">Edit Custom Meal</string>
    <string name="search_menu">Search menu...</string>
    <string name="current_weight">Current Weight</string>
    <string name="nutrients">Nutrients</string>
    <string name="add">Add +</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="total_calories">Total Calories</string>
    <string name="total_steps">Total Steps</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="serving_s">1 Serving(s)</string>
    <string name="my_account">My Account</string>
    <string name="log_out">Log Out</string>
</resources>