<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/pattern_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="80sp"
        android:src="@drawable/logo_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@drawable/form_container"
        >

        <TextView
            android:id="@+id/registerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50sp"
            android:text="@string/register_header"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/unameEdit"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/username"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/email"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:paddingStart="20sp"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/password"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/confirmEdit"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:paddingStart="20sp"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/confirm_password"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:textColor="@color/dark_grey"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:fontFamily="@font/inter"/>

            <TextView
                android:id="@+id/linkLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textSize="16sp"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:fontFamily="@font/inter"/>
        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="80sp"
            android:layout_marginVertical="50sp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>