<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GSContent3">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20sp"
        android:text="@string/title_1"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter"
        android:textAlignment="center"
        android:textStyle="bold" />
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:src="@drawable/gs_content_3"
        />

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:orientation="vertical">

        <Button
            android:id="@+id/weightLossBtn"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:text="@string/weight_loss"
            android:textColor="@color/black"
            android:paddingStart="20sp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            app:backgroundTint= "@null"
            android:background="@drawable/default_button_group"
            />

        <Button
            android:id="@+id/maintainBtn"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:text="@string/maintain_weight"
            android:textColor="@color/black"
            android:paddingStart="20sp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            app:backgroundTint= "@null"
            android:background="@drawable/default_button_group"
            />

        <Button
            android:id="@+id/weightGainBtn"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:text="@string/weight_gain"
            android:textColor="@color/black"
            android:paddingStart="20sp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            app:backgroundTint= "@null"
            android:background="@drawable/default_button_group"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toBottomOf="@id/btn_container"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter"
        android:text="@string/getting_started_3"/>


</androidx.constraintlayout.widget.ConstraintLayout>