<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".AddMealActivity">

    <TextView
        android:id="@+id/addMealHeader"
        android:layout_width="0dp"
        android:layout_height="24sp"
        android:layout_marginStart="56sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="56sp"
        android:fontFamily="@font/inter"
        android:text="@string/add_custom_meal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="8dp"
        android:background="@color/light_grey"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="@id/addMealHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:id="@+id/MealImagePreviewContainer"
        app:layout_constraintTop_toBottomOf="@id/addMealHeader"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_marginTop="30sp"
        android:layout_marginHorizontal="80sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/MealImagePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meal_preview"/>

        <Button
            android:id="@+id/changeImageBtn"
            android:layout_width="50sp"
            android:layout_height="56sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/dark_green"
            android:padding="0sp"
            android:text="+"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/MealAtributeContainer"
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="25sp"
        android:paddingVertical="20sp"
        android:background="@drawable/add_meal_container"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/MealImagePreviewContainer">

        <EditText
            android:id="@+id/AddMealNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="20sp"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/inter"
            android:hint="@string/name"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/AddMealCalorieEditText"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/inter"
            android:hint="@string/calories_per_serving"
            android:inputType="numberDecimal"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/AddMealCarbEditText"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/inter"
            android:hint="@string/carbs_per_serving"
            android:inputType="numberDecimal"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/AddMealProteinEditText"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/inter"
            android:hint="@string/protein_per_serving"
            android:inputType="numberDecimal"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/AddMealFatEditText"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/inter"
            android:hint="@string/fats_per_serving"
            android:inputType="numberDecimal"
            android:paddingStart="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/AddMealBtn"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginHorizontal="65sp"
        android:layout_marginVertical="20sp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/inter"
        android:text="@string/add_meal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:flow_verticalAlign="center"
        app:layout_constraintTop_toBottomOf="@id/MealAtributeContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>