<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GSContent2">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_marginHorizontal="80sp"
        android:layout_marginVertical="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/gs_content_2"/>

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:orientation="vertical"
        android:layout_marginVertical="20sp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40sp"
            android:columnCount="3">

            <EditText
                android:id="@+id/weightEdit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginHorizontal="40sp"
                android:layout_marginBottom="15sp"
                android:background="@drawable/edit_text_style"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/weight_kg"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                android:inputType="numberDecimal"
                android:layout_columnWeight="1"
                />

            <Space
                android:layout_width="10sp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/heightEdit"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginHorizontal="40sp"
                android:layout_marginBottom="15sp"
                android:background="@drawable/edit_text_style"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/height_cm"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                android:fontFamily="@font/inter"
                android:layout_columnWeight="1"
                />
        </GridLayout>

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="20sp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:popupBackground="@color/white" />
        <Button
            android:id="@+id/dobButton"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="40sp"
            android:layout_marginBottom="15sp"
            android:text="@string/date_of_birth"
            android:textAlignment="textStart"
            android:textColor="@color/dark_grey"
            android:paddingStart="20sp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            app:backgroundTint= "@null"
            android:background="@drawable/edit_text_style" />
    </LinearLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toBottomOf="@id/form_container"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter"
        android:text="@string/getting_started_2"/>


</androidx.constraintlayout.widget.ConstraintLayout>